PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Optimization to avoid re-parsing test profile definition multiple times
pts-core: Optimization to avoid re-parsing installed test metadata multiple times
pts-core: Allow longer HTTP timeouts on OpenBenchmarking.org result uploads if needed

Phoronix Test Suite 10.2.2
17 February 2021

pts-core: Add helper text when hitting a download with no working mirrors
pts-core: Various external dependency updates
pts-core: Add enable-repo sub-command for more easily enabling new OpenBenchmarking.org repos
pts-core: Result viewer fix for the limit drop down menu potentially not being activated in some cases
pts-core: Allow renaming runs within the result viewer
phoromatic: Ensure pcntl_signal is present before starting Phoromatic Server
phoromatic: PHP 8 compatibility fixes
phodevi: Fix display driver name potentially being reported inaccurate for some obscure graphics cards / driver configurations
phodevi: Export current GPU graphics card PCI device ID (GPU_DEVICE_ID) for some games/tests relying on it for configuration

Phoronix Test Suite 10.2.1
1 February 2021

pts-core: Add "InstallRequiresInternet" option for test profiles that is more narrow (install time only) than the existing "RequiresInternet"
pts-core: Add check-tests sub-command
pts-core: Fix possible crash on PDF output
pts-core: Various small fixes and tweaks
pts-core: Fix PHP8 + cURL download error
pts_Graph: A number of minor SVG standards compliance updates
phodevi: Log Transparent Huge Pages setting as part of system details
phodevi: Don't bother parsing the X.org log if it grows too big

Phoronix Test Suite 10.2.0
5 January 2021

pts-core: PHP8 detection improvements
pts-core: For estimated run time, avoid over-calculating time if test has no options but multiple outputs
pts-core: Updated (Open)Mandriva external dependencies
pts_Graph: Minor enhancements
phodevi: Add support for reporting ACPI Platform Profile and INT340x Workload Hint
